--- a/Plantasia/Plantasia/Screens/Base.lproj/Main.storyboard
+++ b/Plantasia/Plantasia/Screens/Base.lproj/Main.storyboard
@@ -783,7 +783,7 @@ the + button below.</string>
                                                         </subviews>
                                                     </stackView>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                <color key="backgroundColor" name="white-FFFFFF"/>
                                                 <constraints>
                                                     <constraint firstItem="qEN-ft-gjh" firstAttribute="leading" secondItem="XuA-uL-EBq" secondAttribute="leading" id="dGC-X7-v32"/>
                                                     <constraint firstAttribute="bottom" secondItem="qEN-ft-gjh" secondAttribute="bottom" id="dwp-3G-gle"/>
@@ -792,7 +792,6 @@ the + button below.</string>
                                                 </constraints>
                                             </view>
                                         </subviews>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="104" id="KkG-xn-6Zo"/>
                                             <constraint firstAttribute="trailing" secondItem="XuA-uL-EBq" secondAttribute="trailing" id="R4J-x9-Aal"/>
@@ -1181,7 +1180,7 @@ the + button below.</string>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="vKY-ka-9Sj"/>
+        <segue reference="Zfa-G1-pbn"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="pencil" catalog="system" width="128" height="113"/>
@@ -1203,6 +1202,9 @@ the + button below.</string>
         </namedColor>
         <namedColor name="orange-FE865D">
             <color red="0.99607843137254903" green="0.52549019607843139" blue="0.36470588235294116" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="white-FFFFFF">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
