--- a/Plantasia/Plantasia/Screens/Garden/AddPlantBarButtonItem/AddPlantBarButtonItemView.xib
+++ b/Plantasia/Plantasia/Screens/Garden/AddPlantBarButtonItem/AddPlantBarButtonItemView.xib
@@ -21,8 +21,9 @@
                         <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="eiE-Jg-rjn">
                             <rect key="frame" x="0.0" y="0.0" width="142" height="25"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pencil.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="A5a-OR-hlC">
-                                    <rect key="frame" x="0.0" y="0.5" width="25" height="24"/>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus-1" translatesAutoresizingMaskIntoConstraints="NO" id="A5a-OR-hlC">
+                                    <rect key="frame" x="0.0" y="0.0" width="25" height="25"/>
+                                    <color key="tintColor" name="black-232323"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="25" id="AWe-cn-Qt3"/>
                                         <constraint firstAttribute="width" constant="25" id="UBp-CP-G8C"/>
@@ -59,7 +60,7 @@
         </view>
     </objects>
     <resources>
-        <image name="pencil.circle.fill" catalog="system" width="128" height="121"/>
+        <image name="plus-1" width="35" height="35"/>
         <namedColor name="black-232323">
             <color red="0.13725490196078433" green="0.13725490196078433" blue="0.13725490196078433" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
